9-23 fix moble alignment

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,5 +1,6 @@
 .home {
   justify-content: center;
+  padding: 1rem;
 }
 
 .home__title {
@@ -45,6 +46,11 @@
 @media (max-width: 768px) {
   .home__blogs {
     grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+  }
+  .home__title {
+    text-align: center;
+    margin-bottom: 20px;
   }
 }
 
@@ -53,7 +59,6 @@
     grid-template-columns: 1fr;
   }
   .home__title {
-    text-align: left;
     margin-bottom: 20px;
     margin-right: 0;
   }
