--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -2,30 +2,32 @@
   padding-top: 60px;
   display: grid;
   grid-template-columns: 1fr 2fr;
-  gap: 20px;
 }
 
 .profile__title {
   text-align: center;
   margin-bottom: 20px;
+  margin-top: 0;
 }
 
 .profile__blogs {
   display: grid;
-  grid-template-columns: repeat(2, 3fr);
+  grid-template-columns: repeat(2, 2fr);
   gap: 20px;
   justify-items: self-end;
   list-style-type: none;
+  margin-left: 20px;
 }
 
 .profile__blog-card {
   background-color: white; /* White background for the blog card */
   margin: 10px 0; /* Space between blog cards */
-  /* padding: 15px; /* Padding inside each card */
+  padding: 15px; /* Padding inside each card
+     transition: box-shadow 0.3s; /* Smooth transition for shadow effect */
+  width: 280px;
   border: 1px solid #ccc; /* Light border */
   border-radius: 10px; /* Slightly rounded corners */
   transition: box-shadow 0.3s; /* Smooth transition for shadow effect */
-  width: 280px;
 }
 
 .profile__blog-card img {
@@ -49,13 +51,10 @@ h1 {
 .profile__sidebar {
   display: flex;
   flex-direction: column;
-  gap: 5px;
   align-items: start;
-  /* height: 40px; */
 }
 
 .sidebar__logout {
-  margin: 0;
   font-size: 20px;
   line-height: 24px;
   font-weight: 700;
@@ -80,6 +79,7 @@ h1 {
   font-family: Cabinet Grotesk;
   margin-left: 5px;
   color: black;
+  flex-direction: row;
 }
 
 .sidebar__nav-item a:hover {
@@ -94,11 +94,15 @@ h1 {
   .profile__title {
     display: none;
   }
+  .profile__blog-card {
+    padding-left: 0;
+  }
 }
 
 @media (max-width: 480px) {
   .profile__blogs {
     grid-template-columns: 1fr;
+    margin-right: 60px;
   }
   .profile__title {
     display: none;
@@ -107,6 +111,14 @@ h1 {
     padding-top: 60px;
     display: grid;
     grid-template-columns: 1fr;
-    gap: 20px;
+  }
+  .profile__blog-card {
+    background-color: white; /* White background for the blog card */
+    margin: 10px 0; /* Space between blog cards */
+    padding: 15px; /* Padding inside each card
+     transition: box-shadow 0.3s; /* Smooth transition for shadow effect */
+    border: 1px solid #ccc; /* Light border */
+    border-radius: 10px; /* Slightly rounded corners */
+    transition: box-shadow 0.3s; /* Smooth transition for shadow effect */
   }
 }
